--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,6 @@
                     <div class="logo">
                         <a href="/">
                             <img class="desktop__logo" src="./img/logo_white.svg" alt="logo">
-                            <img class="mobile__logo" src="./img/logo_green.svg" alt="logo">
                         </a>
                     </div>
                     <!-- /.logo -->
@@ -150,9 +149,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="step">01</div>
-                    <h1>Создание и продвижение сайтов в Крыму и Краснодарском крае</h1>
-                    <p>Разрабатываем сайты по всему Крыму: Симферополь, Ялта, Евпатория, Алушта, Саки, Керчь, Джанкой. Работаем в Краснодарском крае и по всей России. Настраиваем контекстную рекламу и занимаемся продвижением сайтов. Ознакомиться с полным перечнем услуг, а также заказать консультацию, Вы можете на нашем сайте.</p>
+                    <h1>Создание сайтов в Крыму и Симферополе</h1>
+                    <p>В жизни каждого бизнесмена наступает момент, когда он понимает: «Пора расширять бизнес». А куда? Конечно в интернет. Как? Ответов на этот вопрос много. Один из вариантов: сделать сайт под заказ, настроить рекламу в интернете, оформить и раскрутить группу в социальных сетях.</p>
+                    <p>Все эти услуги предлагает наша веб-студия Красбер в Симферополе. Мы работаем по всему Крыму и за его пределами, чтобы увеличить продажи Вашего бизнеса, привести новых клиентов, подобрать наиболее эффективную стратегию и рекламу.</p>
                 </div>
             </div>
         </div>
@@ -162,10 +161,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="step">02</div>
-
                     <h2 class="as__h1">Наши услуги</h2>
-
                     <div class="services__list">
                         <div class="services__list-item is__open">
                             <a href="#" class="name">Создание сайта</a>
@@ -238,7 +234,7 @@
                         <div class="wrap">
                             <div class="desc">
                                 <div class="as__h1">Заказать услугу</div>
-                                <p>Вы можете бесплатно  получить аудит вашего сайта. Вас это не к чему не обязывает.</p>
+                                <p>Вы можете бесплатно  получить аудит вашего сайта. <br />Вас это не к чему не обязывает.</p>
                             </div>
                             <div class="form__box">
                                 <form action="#" id="order__service-form" class="order__service" method="post">
@@ -268,7 +264,7 @@
                                         <input type="email" name="email" placeholder="Email" autocomplete="off">
                                     </div>
                                     <div class="single__block submit__block">
-                                        <button type="submit">Отправить</button>
+                                        <button type="submit" class="btn">Отправить</button>
                                     </div>
                                     <div class="single__block agree__block">
                                         <input type="checkbox" name="agree" id="i_agree" value="1" checked>
@@ -289,49 +285,30 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="step">03</div>
-                    <h2 class="as__h1">Почему мы</h2>
+                    <h2 class="as__h1">Немного фактов о нас</h2>
                     <div class="why__we-list">
                         <div class="why__we-list-item">
-                            <svg class="icon opit_v_razrabotke">
-                                <use xlink:href="./img/symbols.svg#opit_v_razrabotke"></use>
-                            </svg>
-                            <div class="separator"></div>
-                            <div class="desc">Опыт в разработке сайтов более 5 лет</div>
+                            <div class="step">01</div>
+                            <div class="desc">Опыт в разработке продающих сайтов более 5 лет любой сложности</div>
                         </div>
                         <div class="why__we-list-item">
-                            <svg class="icon opit">
-                                <use xlink:href="./img/symbols.svg#opit"></use>
-                            </svg>
-                            <div class="separator"></div>
-                            <div class="desc">Опыт в интернет-рекламе более 3 лет</div>
+                            <div class="step">02</div>
+                            <div class="desc">Опыт в интернет-маркетинге и контекстной рекламе более 3 лет</div>
                         </div>
                         <div class="why__we-list-item">
-                            <svg class="icon sertifikat">
-                                <use xlink:href="./img/symbols.svg#sertifikat"></use>
-                            </svg>
-                            <div class="separator"></div>
+                            <div class="step">03</div>
                             <div class="desc">Сертифицированные специалисты Яндекс.Директ и Google.Adwords</div>
                         </div>
                         <div class="why__we-list-item">
-                            <svg class="icon konsultaciya">
-                                <use xlink:href="./img/symbols.svg#konsultaciya"></use>
-                            </svg>
-                            <div class="separator"></div>
-                            <div class="desc">Бесплатные консультации и информационная поддержка спец. на всех этапах работы</div>
+                            <div class="step">04</div>
+                            <div class="desc">Бесплатная информационная поддержка на всех этапах работы</div>
                         </div>
                         <div class="why__we-list-item">
-                            <svg class="icon podhod">
-                                <use xlink:href="./img/symbols.svg#podhod"></use>
-                            </svg>
-                            <div class="separator"></div>
+                            <div class="step">05</div>
                             <div class="desc">Индивидуальный подход и расчет стоимости для каждого клиента</div>
                         </div>
                         <div class="why__we-list-item">
-                            <svg class="icon garantii">
-                                <use xlink:href="./img/symbols.svg#garantii"></use>
-                            </svg>
-                            <div class="separator"></div>
+                            <div class="step">06</div>
                             <div class="desc">Юридические гарантии (составление договора)</div>
                         </div>
                     </div>
@@ -344,7 +321,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="step">04</div>
                     <h3 class="as__h1">Отзывы клиентов</h3>
 
                     <div class="owl-carousel owl-theme">
@@ -506,7 +482,7 @@
                         </div>
 
                         <div class="btn__more">
-                            <a href="#" class="btn green">БОЛЬШЕ РАБОТ</a>
+                            <a href="#" class="btn white">Посмотреть все работы</a>
                         </div>
 
                     </div>
@@ -568,9 +544,9 @@
     <section class="order__form">
         <div class="container">
             <div class="row">
-                <div class="col-6 green">
+                <div class="col-6">
                     <div class="as__h1">Заказать сайт</div>
-                    <div class="sub__title">Вы можете бесплатно  получить аудит вашего сайта. Вас это не к чему не обязывает.</div>
+                    <div class="sub__title">Заполните форму для заказа услуги. <br/>Наш менеджер свяжется с Вами!</div>
 
                     <form action="#" method="post">
                         <div class="single__block">
@@ -590,7 +566,7 @@
                             <label for="i_agree2">Отправляя заяявку  вы соглашаетесь с <a href="#" title="Перейти на страницу описания">правилами офферты</a></label>
                         </div>
                         <div class="single__block submit__block">
-                            <button type="submit">Отправить</button>
+                            <button type="submit" class="btn green">Отправить</button>
                         </div>
                     </form>
                 </div>
@@ -660,7 +636,7 @@
                     <div class="line"></div>
                     <div class="row list__columns">
                         <div class="col__logo">
-                            <img src="./img/logo_green.svg" class="logo__green" alt="logo">
+                            <img src="./img/logo_blue.svg" class="logo__green" alt="logo">
                             <div class="copyright">
                                 2017 - 2018 © Создание и раскрутка сайтов. ООО «Красбер», ИНН 9106013479
                                 <p>Вся информация, представленная на сайте, носит информационный характер и ни при каких условиях не является публичной офертой.</p>
