--- a/src/usluga.html
+++ b/src/usluga.html
@@ -35,7 +35,7 @@
                     </svg>
                     <div class="logo">
                         <a href="/">
-                            <img src="./img/logo_green.svg" data-green-logo="" alt="logo">
+                            <img src="./img/logo_white.svg" data-green-logo="" alt="logo">
                         </a>
                     </div>
                     <!-- /.logo -->
@@ -233,7 +233,13 @@
                     <div class="row">
                         <div class="tariff type-one col-4">
                             <div class="box">
-                                <div class="name">Базовый</div>
+                                <div class="name">
+                                    <p>пакет</p>
+                                    <p>“Самостоятельный”</p>
+                                </div>
+                            </div>
+                            <div class="box box-bg">
+                                <div class="price">от <span>4500</span> р.</div>
                                 <svg class="icon arrow_down">
                                     <use xlink:href="./img/symbols.svg#arrow_down"></use>
                                 </svg>
@@ -259,7 +265,13 @@
                         </div>
                         <div class="tariff type-two col-4 is__open">
                             <div class="box">
-                                <div class="name">Стандарт</div>
+                                <div class="name">
+                                    <p>пакет</p>
+                                    <p>“Самостоятельный”</p>
+                                </div>
+                            </div>
+                            <div class="box box-bg">
+                                <div class="price">от <span>4500</span> р.</div>
                                 <svg class="icon arrow_down">
                                     <use xlink:href="./img/symbols.svg#arrow_down"></use>
                                 </svg>
@@ -281,7 +293,13 @@
                         </div>
                         <div class="tariff type-three col-4">
                             <div class="box">
-                                <div class="name">Премиум</div>
+                                <div class="name">
+                                    <p>пакет</p>
+                                    <p>“Самостоятельный”</p>
+                                </div>
+                            </div>
+                            <div class="box box-bg">
+                                <div class="price">от <span>4500</span> р.</div>
                                 <svg class="icon arrow_down">
                                     <use xlink:href="./img/symbols.svg#arrow_down"></use>
                                 </svg>
@@ -688,7 +706,7 @@
                         <div class="wrap">
                             <div class="desc">
                                 <div class="as__h1">Заказать услугу</div>
-                                <p>Вы можете бесплатно  получить аудит вашего сайта. Вас это не к чему не обязывает.</p>
+                                <p>Вы можете бесплатно  получить аудит вашего сайта. <br />Вас это не к чему не обязывает.</p>
                             </div>
                             <div class="form__box">
                                 <form action="#" class="order__service" method="post">
@@ -710,7 +728,7 @@
                                         <input type="email" name="email" placeholder="Email" autocomplete="off">
                                     </div>
                                     <div class="single__block">
-                                        <button type="submit">Отправить</button>
+                                        <button type="submit" class="btn green">Отправить</button>
                                     </div>
                                     <div class="single__block agree__block">
                                         <input type="checkbox" name="agree" id="i_agree" value="1" checked>
