--- a/src/contacts.html
+++ b/src/contacts.html
@@ -103,7 +103,7 @@
         <div class="bg__box"></div>
         <div class="container">
             <div class="row">
-                <div class="col-10">
+                <div class="col-10 blue">
                     <div class="contact__form">
                         <div class="wrap">
                             <div class="desc">
@@ -138,7 +138,7 @@
                                         <input type="email" name="email" placeholder="Email" autocomplete="off">
                                     </div>
                                     <div class="single__block">
-                                        <button type="submit">Отправить</button>
+                                        <button type="submit" class="btn">Отправить</button>
                                     </div>
                                     <div class="single__block agree__block">
                                         <input type="checkbox" name="agree" id="i_agree" value="1" checked>
