--- a/src/seo-prodvizhenie.html
+++ b/src/seo-prodvizhenie.html
@@ -265,7 +265,7 @@
                                     <input type="text" id="other_field" autocomplete="off">
                                 </div>
                                 <div class="right">
-                                    <div class="continue btn_style-two">Далее</div>
+                                    <div class="continue btn">Далее</div>
                                 </div>
                             </fieldset>
                             <fieldset data-step="2">
@@ -298,8 +298,8 @@
                                     </li>
                                 </ul>
                                 <div class="right">
-                                    <div class="previous btn_style-two">Назад</div>
-                                    <div class="continue btn_style-two">Далее</div>
+                                    <div class="previous btn">Назад</div>
+                                    <div class="continue btn">Далее</div>
                                 </div>
                             </fieldset>
                             <fieldset data-step="3" class="multiple">
@@ -407,7 +407,7 @@
                                                 <label for="i_agree_quiz">Отправляя заяявку  вы соглашаетесь с <a href="#" title="Перейти на страницу описания">правилами офферты</a></label>
                                             </div>
                                             <div class="single_block submit__block">
-                                                <button type="submit">Отправить</button>
+                                                <button type="submit" class="btn">Отправить</button>
                                             </div>
                                         </div>
                                     </div>
