--- a/src/usluga.html
+++ b/src/usluga.html
@@ -143,7 +143,7 @@
                                 </div>
                                 <div class="link__more">
                                     <div class="link__more-text">
-                                        <a href="#">ПОДРОБНЕЕ</a>
+                                        <a href="#" class="btn white">ПОДРОБНЕЕ</a>
                                     </div>
                                 </div>
                             </div>
@@ -195,6 +195,23 @@
                                 </ul>
                                 <p>С помощью рекламы можно рассказать о сервисах, услугах, товарах, а форма обратной связи служит для общения с заказчиками.</p>
                             </div>
+                        </div>
+                    </div>
+
+                    <div class="why__we-list type__two">
+                        <div class="why__we-list-item">
+                            <div class="step">01</div>
+                            <div class="desc">Продажа одежды</div>
+                        </div>
+
+                        <div class="why__we-list-item">
+                            <div class="step">02</div>
+                            <div class="desc">Продажа косметических средств</div>
+                        </div>
+
+                        <div class="why__we-list-item">
+                            <div class="step">03</div>
+                            <div class="desc">Продажа предметов для дома</div>
                         </div>
                     </div>
 
@@ -433,7 +450,7 @@
                             <label for="i_agree2">Отправляя заяявку  вы соглашаетесь с <a href="#" title="Перейти на страницу описания">правилами офферты</a></label>
                         </div>
                         <div class="single__block submit__block">
-                            <button type="submit">Отправить</button>
+                            <button type="submit" class="btn green">Отправить</button>
                         </div>
                     </form>
                 </div>
@@ -448,81 +465,44 @@
                     <div class="as__h1">Услуги</div>
                     <div class="list__items">
                         <div class="list__items-item4">
-                            <svg class="icon razrabotka">
-                                <use xlink:href="./img/symbols.svg#razrabotka"></use>
-                            </svg>
                             <div class="title">Разработка сайтов</div>
-                            <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета. Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
-                            <ul>
-                                <li>Наполнение сайта</li>
-                                <li>Верстка проекта</li>
-                                <li>Формы захвата</li>
-                            </ul>
-                            <div class="price">от 12 000 р.</div>
-                            <a href="#" class="btn_style-two">Подробнее</a>
+                            <div class="price">от <span>12 000</span> р.</div>
+                            <div class="body">
+                               <p>SEO-оптимизация является важной частью раскрутки сайта и улучшения позиций в поисковой выдаче Яндекс и Google.</p>
+                            </div>
+                            <div class="btn-box">
+                                <a href="#" class="btn btn-green">Подробнее</a>
+                            </div>
                         </div>
                         <div class="list__items-item4">
-                            <svg class="icon seo">
-                                <use xlink:href="./img/symbols.svg#seo"></use>
-                            </svg>
-                            <div class="title">SEO - продвижение</div>
-                            <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета. Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
-                            <div class="price">от 7 000 р.</div>
-                            <a href="#" class="btn_style-two">Подробнее</a>
+                            <div class="title">Разработка сайтов</div>
+                            <div class="price">от <span>12 000</span> р.</div>
+                            <div class="body">
+                                <p>SEO-оптимизация является важной частью раскрутки сайта и улучшения позиций в поисковой выдаче Яндекс и Google.</p>
+                            </div>
+                            <div class="btn-box">
+                                <a href="#" class="btn btn-green">Подробнее</a>
+                            </div>
                         </div>
                         <div class="list__items-item4">
-                            <svg class="icon kontekst">
-                                <use xlink:href="./img/symbols.svg#kontekst"></use>
-                            </svg>
-                            <div class="title">Контекстная реклама</div>
-                            <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета. Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
-                            <div class="price">от 5 000 р.</div>
-                            <a href="#" class="btn_style-two">Подробнее</a>
+                            <div class="title">Разработка сайтов</div>
+                            <div class="price">от <span>12 000</span> р.</div>
+                            <div class="body">
+                                <p>SEO-оптимизация является важной частью раскрутки сайта и улучшения позиций в поисковой выдаче Яндекс и Google.</p>
+                            </div>
+                            <div class="btn-box">
+                                <a href="#" class="btn btn-green">Подробнее</a>
+                            </div>
                         </div>
                         <div class="list__items-item4">
-                            <svg class="icon redesign">
-                                <use xlink:href="./img/symbols.svg#redesign"></use>
-                            </svg>
-                            <div class="title">Редизайн сайта</div>
-                            <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета. Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
-                            <div class="price">от 25 000 р.</div>
-                            <a href="#" class="btn_style-two">Подробнее</a>
-                        </div>
-                        <div class="list__items-item4">
-                            <svg class="icon oneseo">
-                                <use xlink:href="./img/symbols.svg#oneseo"></use>
-                            </svg>
-                            <div class="title">Разовая SEO-оптимизация</div>
-                            <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета. Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
-                            <div class="price">от 8 000 р.</div>
-                            <a href="#" class="btn_style-two">Подробнее</a>
-                        </div>
-                        <div class="list__items-item4">
-                            <svg class="icon free_audit">
-                                <use xlink:href="./img/symbols.svg#free_audit"></use>
-                            </svg>
-                            <div class="title">Бесплатный аудит</div>
-                            <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета. Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
-                            <div class="price">Бесплатно</div>
-                            <a href="#" class="btn_style-two">Подробнее</a>
-                        </div>
-                        <div class="list__items-item4">
-                            <svg class="icon design">
-                                <use xlink:href="./img/symbols.svg#design"></use>
-                            </svg>
-                            <div class="title">Дизайн сопровождение</div>
-                            <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета. Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
-                            <div class="price">от 20 000 р.</div>
-                            <a href="#" class="btn_style-two">Подробнее</a>
-                        </div>
-                        <div class="list__items-item4">
-                            <svg class="icon smm">
-                                <use xlink:href="./img/symbols.svg#smm"></use>
-                            </svg>
-                            <div class="title">SMM сопровождение</div>
-                            <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета. Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
-                            <div class="price">от 4 000 р.</div>
-                            <a href="#" class="btn_style-two">Подробнее</a>
+                            <div class="title">Разработка сайтов</div>
+                            <div class="price">от <span>12 000</span> р.</div>
+                            <div class="body">
+                                <p>SEO-оптимизация является важной частью раскрутки сайта и улучшения позиций в поисковой выдаче Яндекс и Google.</p>
+                            </div>
+                            <div class="btn-box">
+                                <a href="#" class="btn btn-green">Подробнее</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -568,7 +548,7 @@
                                         <input type="email" name="email" placeholder="Email" autocomplete="off">
                                     </div>
                                     <div class="single__block">
-                                        <button type="submit">Отправить</button>
+                                        <button type="submit" class="btn green">Отправить</button>
                                     </div>
                                     <div class="single__block agree__block">
                                         <input type="checkbox" name="agree" id="i_agree" value="1" checked>
