--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -188,12 +188,7 @@
                                     </div>
                                     <div class="link__more">
                                         <div class="link__more-text">
-                                            <a href="/portfolio-item.html">ПОДРОБНЕЕ</a>
-                                        </div>
-                                        <div class="link__more-icon">
-                                            <svg class="icon link">
-                                                <use xlink:href="./img/symbols.svg#link"></use>
-                                            </svg>
+                                            <a href="/portfolio-item.html" class="btn white">ПОДРОБНЕЕ</a>
                                         </div>
                                     </div>
                                 </div>
